// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nullsavepropertylookup call 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": PropertyLookup {
          "kind": "nullsafepropertylookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "call",
          },
          "what": Variable {
            "curly": false,
            "kind": "variable",
            "name": "obj",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`nullsavepropertylookup multiple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": PropertyLookup {
        "kind": "nullsafepropertylookup",
        "offset": Identifier {
          "kind": "identifier",
          "name": "property_2",
        },
        "what": PropertyLookup {
          "kind": "nullsafepropertylookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "property_1",
          },
          "what": Variable {
            "curly": false,
            "kind": "variable",
            "name": "obj",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`nullsavepropertylookup simple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": PropertyLookup {
        "kind": "nullsafepropertylookup",
        "offset": Identifier {
          "kind": "identifier",
          "name": "property",
        },
        "what": Variable {
          "curly": false,
          "kind": "variable",
          "name": "obj",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`nullsavepropertylookup variable 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": PropertyLookup {
        "kind": "nullsafepropertylookup",
        "offset": Variable {
          "curly": false,
          "kind": "variable",
          "name": "property",
        },
        "what": Variable {
          "curly": false,
          "kind": "variable",
          "name": "obj",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
